--- a/Examples/package.json
+++ b/Examples/package.json
@@ -31,7 +31,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
     "request": "^2.88.2",
     "scichart": "^1.2.1426",
     "socket.io": "^3.0.4"
